--- a/src/intro-to-options-dodao-academy.yaml
+++ b/src/intro-to-options-dodao-academy.yaml
@@ -1,7 +1,7 @@
 categories:
   - introduction
 content: This guides explains the basics of Options
-created: '2023-01-22T13:04:20.088Z'
+created: '2023-01-22T13:05:53.393Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
@@ -220,18 +220,20 @@ steps:
 
       Using Stocks
 
-      Total Amount to Invest         -   $5000
+      |---|--|
 
-      Current Stock Price              -     $165
+      | Total Amount to Invest       |  $5000 |
 
-      Number of shares bought   -       30
+      | Current Stock Price             |    $165 |
 
-      New Price after a month      -    $181.50
+      | Number of shares bought   |       30 |
 
-      Profit                                        -     (181.5 - 165) * 30 =
-      $495
+      | New Price after a month      |    $181.50 |
 
-      ROI                                            -   $495/$5000 = ~10%
+      | Profit                                        |     (181.5 - 165) * 30 =
+      $495 |
+
+      | ROI                                            |  $495/$5000 = ~10% |
 
       ```
 
