--- a/src/intro-to-options-dodao-academy.yaml
+++ b/src/intro-to-options-dodao-academy.yaml
@@ -1,7 +1,7 @@
 categories:
   - introduction
 content: This guides explains the basics of Options
-created: '2023-01-22T13:13:08.982Z'
+created: '2023-01-22T13:14:14.138Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
@@ -263,7 +263,9 @@ steps:
 
       | Price per stock   |       $5.5 |
 
-      | Number of contracts bought   |       9 (9* 100 shares equivalent)|
+      | Number of shares in one contract   |       100 |
+
+      | Number of contracts bought   |       9 (9 * 100 shares equivalent)|
 
       | New Price after a month      |    $181.50 |
 
