--- a/src/intro-to-options-dodao-academy.yaml
+++ b/src/intro-to-options-dodao-academy.yaml
@@ -1,7 +1,7 @@
 categories:
   - introduction
 content: This guides explains the basics of Options
-created: '2023-01-22T13:14:14.138Z'
+created: '2023-01-22T22:15:06.057Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
@@ -284,7 +284,7 @@ steps:
       the profits , which can be unlimited because the underlying asset can rise
       upto any extent.      
           
-    name: Trading Options- Call Options
+    name: Call Options
     stepItems: []
     uuid: bf98712e-3054-4ed3-a5c0-cd9536204840
   - content: ''
@@ -360,7 +360,7 @@ steps:
         uuid: 34dbb4f4-118b-44fe-a9c9-28f45ad48a4a
     uuid: 83bef150-f3bb-444d-8924-dcaeab5da283
   - content: >
-      ### Buying Puts
+      ### Put Option
 
       A put option gives the buyer the right to sell an underlying asset at a
       set price. This strategy is adopted by a trader who is bearish in nature
@@ -386,7 +386,7 @@ steps:
       potential profit is limited, but the put option amplifies the trader's
       return similarly to a long call option.
           
-    name: Trading Options- Put Options
+    name: Put Option
     stepItems: []
     uuid: 6f0fc5b8-a0f3-4a16-bcf0-26834b939d83
   - content: ''
@@ -461,7 +461,14 @@ steps:
         type: SingleChoice
         uuid: 642438b5-f063-4c18-94bf-dd1052c54497
     uuid: f8cd850d-396e-4d6f-8a22-3531965d4664
-  - content: >
+  - content: >+
+      Options contracts can be bought at any stock exchange. After the initial
+      purchase, they can be traded like any other stock. The value of the
+      contract will change based on market conditions and time.
+
+
+      ## Selling Options Contract
+
       ### Call Seller
 
       A call seller is a person who executes the selling of a call option. This
@@ -488,8 +495,35 @@ steps:
       the losses can maximise as the market prices soar above the exercise
       price. A put seller is obligated to buy when the put buyer wants to sell
       the derivative.
+       
+      ## Buy Options Contracts   
+
+      ##  Call Buyer
+
+      A call buyer is a person who executes the buying of a call option. This
+      buyer has to pay the premium during the buying of a call contract.The
+      motive behind buying a call option is that the buyer is bullish in nature
+      i.e. he/she predicts that the market will rise in the upcoming time and
+      his portfolio will gain profits. For a call buyer the profits are
+      unlimited if the market keeps on rising above the exercise price whereas
+      the losses only include the premium amount he paid to the call seller. A
+      call buyer has the right to execute the buying but he/she is not obligated
+      to do so.
+
+
+      ### Put Buyer
+
+      A put buyer is the one who buys a put option to have the right to sell.
+      This buyer pays a premium to the put seller during the buying of the
+      contract. He/She buys a put option due to the bearish behaviour i.e.
+      he/she predicts that the market wil fall in the upcoming times. For a put
+      buyer the profits are unlimited because the rates may fall more than the
+      exercise price but on the other hand the losses are limited to the premium
+      he/she paid to the put seller for placing the contract. A put buyer has
+      the right to sell the option but he/she is not obligated to do so.
           
-    name: Trading Options- Seller Side
+
+    name: Trading Option Contracts
     stepItems: []
     uuid: a585b6d4-1da8-4f87-8fd7-88233ea1b330
   - content: ''
@@ -522,31 +556,7 @@ steps:
         type: SingleChoice
         uuid: 1fd93a69-81c7-4b9a-be26-624423643c6d
     uuid: 547af8f3-d25e-4be0-93c5-5a4d7751118b
-  - content: >
-      ### Call Buyer
-
-      A call buyer is a person who executes the buying of a call option. This
-      buyer has to pay the premium during the buying of a call contract.The
-      motive behind buying a call option is that the buyer is bullish in nature
-      i.e. he/she predicts that the market will rise in the upcoming time and
-      his portfolio will gain profits. For a call buyer the profits are
-      unlimited if the market keeps on rising above the exercise price whereas
-      the losses only include the premium amount he paid to the call seller. A
-      call buyer has the right to execute the buying but he/she is not obligated
-      to do so.
-
-
-      ### Put Buyer
-
-      A put buyer is the one who buys a put option to have the right to sell.
-      This buyer pays a premium to the put seller during the buying of the
-      contract. He/She buys a put option due to the bearish behaviour i.e.
-      he/she predicts that the market wil fall in the upcoming times. For a put
-      buyer the profits are unlimited because the rates may fall more than the
-      exercise price but on the other hand the losses are limited to the premium
-      he/she paid to the put seller for placing the contract. A put buyer has
-      the right to sell the option but he/she is not obligated to do so.
-          
+  - content: ''
     name: Trading Options- Buyer Side
     stepItems: []
     uuid: aadeb797-fe33-4281-a99f-e5b6998c7aea
