--- a/src/intro-to-options-dodao-academy.yaml
+++ b/src/intro-to-options-dodao-academy.yaml
@@ -1,7 +1,7 @@
 categories:
   - introduction
 content: This guides explains the basics of Options
-created: '2023-01-22T22:15:06.057Z'
+created: '2023-01-22T22:16:57.271Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
@@ -498,7 +498,7 @@ steps:
        
       ## Buy Options Contracts   
 
-      ##  Call Buyer
+      ###  Call Buyer
 
       A call buyer is a person who executes the buying of a call option. This
       buyer has to pay the premium during the buying of a call contract.The
