update guide Gauges System(CRV & BAL)

--- a/src/gauges-and-bribes-in-crv-and-bal-dodao-academy.yaml
+++ b/src/gauges-and-bribes-in-crv-and-bal-dodao-academy.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: New Guide
-created: '2023-01-24T19:32:31.766Z'
+created: '2023-01-26T21:04:07.814Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: course
@@ -9,15 +9,25 @@ name: Gauges System(CRV & BAL)
 publishStatus: Draft
 showIncorrectOnCompletion: true
 steps:
-  - content: |-
+  - content: >-
       # Coming soon
 
+
       # References
+
       veBAL — How to Increase your Benefits
-       - https://medium.com/balancer-protocol/vebal-how-to-increase-your-benefits-b51daf6458a8
+
+      -
+      https://medium.com/balancer-protocol/vebal-how-to-increase-your-benefits-b51daf6458a8
+
 
       veBAL Pt.2 — Bribing and BIP19’s Free Bribes
-       - https://medium.com/balancer-protocol/vebal-pt-2-bribing-and-bip19s-free-bribes-b2f8334eba14        
+
+      -
+      https://medium.com/balancer-protocol/vebal-pt-2-bribing-and-bip19s-free-bribes-b2f8334eba14
+
+      -
+      https://medium.com/balancer-protocol/vebal-how-to-increase-your-benefits-b51daf6458a8 
     name: Introduction
     stepItems: []
     uuid: 0b3b70bc-add9-411d-9f84-66e9970c7a9f
