--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -15,3 +15,4 @@ guides:
   - bridges-deep-dive-dodao-academy.yaml
   - central-bank-digital-currency-dodao-academy.yaml
   - crypto-security-dodao-academy.yaml
+  - bearish-short-vs-put-dodao-academy.yaml
