--- a/src/bearish-short-vs-put-dodao-academy.yaml
+++ b/src/bearish-short-vs-put-dodao-academy.yaml
@@ -1,9 +1,9 @@
 categories: []
-content: 'Short selling and put options are fundamentally bearish methods '
-created: '2023-01-29T17:56:50.611Z'
+content: Short selling & Put options are bearish ways of speculation
+created: '2023-01-29T18:04:54.581Z'
 guideIntegrations:
   discordRoleIds: []
-guideType: course
+guideType: onboarding
 key: bearish-short-vs-put-dodao-academy
 name: Bearish - Short vs Put
 publishStatus: Draft
@@ -46,4 +46,4 @@ steps:
     uuid: 36150ca7-e52c-495d-ad2f-0c4735284a85
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: 7b14f6c2-0f3a-47f7-a14e-92082c91c499
+uuid: bearish-short-vs-put-dodao-academy
