--- a/src/bearish-short-vs-put-dodao-academy.yaml
+++ b/src/bearish-short-vs-put-dodao-academy.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Short selling & Put options are bearish ways of speculation
-created: '2023-01-29T18:32:28.500Z'
+created: '2023-01-29T19:52:44.912Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
@@ -17,6 +17,30 @@ steps:
     name: Introduction Evaluation
     stepItems: []
     uuid: 36150ca7-e52c-495d-ad2f-0c4735284a85
+  - content: >-
+      Short selling is far riskier than purchasing puts. With short sales, the
+      reward may be limited, as at max stock can decline to zero, but the risk
+      is potentially unlimited, because the stock's value may rise infinitely.
+
+
+      Despite the risks, short selling can be an effective strategy during a
+      broad bear market, as stocks typically fall faster than they rise.
+      Additionally, shorting may carry slightly less risk when the security
+      being shorted is an index or ETF, as the risk of a sharp rally in the
+      entire index is usually lower than for an individual stock.
+
+
+      Short selling is generally more expensive than buying puts due to the fact
+      that margin requirements are often higher. Margin trading allows traders
+      to take out a loan from their broker in order to finance the purchase of
+      an asset. Because of the inherent risks involved, not all trading accounts
+      are allowed to trade on margin. Your broker will require you to have the
+      necessary funds in your account to cover your shorts. As the price of the
+      asset shorted begins to climb, the broker will also increase the value of
+      the margin that the trader is required to hold.
+    name: Short Selling Details
+    stepItems: []
+    uuid: b9505817-c008-4ff1-bf85-459ce818c9f3
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
 uuid: bearish-short-vs-put-dodao-academy
