--- a/src/bearish-short-vs-put-dodao-academy.yaml
+++ b/src/bearish-short-vs-put-dodao-academy.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Short selling & Put options are bearish ways of speculation
-created: '2023-01-29T19:52:44.912Z'
+created: '2023-01-29T23:48:47.748Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
@@ -38,9 +38,35 @@ steps:
       necessary funds in your account to cover your shorts. As the price of the
       asset shorted begins to climb, the broker will also increase the value of
       the margin that the trader is required to hold.
-    name: Short Selling Details
+    name: Short Selling
     stepItems: []
     uuid: b9505817-c008-4ff1-bf85-459ce818c9f3
+  - content: >-
+      When a trader purchases a put option, he/she has the right to sell the
+      underlying asset at the price specified in the option. Traders are under
+      no obligation to purchase the stocks, commodities, or other assets secured
+      by the Put.
+
+
+      The option must be exercised within the time period set forth in the put
+      contract. If the stock falls below the put strike price, the put value
+      will generate profits. Conversely, if the stock remains above the strike
+      price, the put will expire worthlessly, and the trader will not need to
+      buy the asset. And because of this risk in the case of Put options is
+      limited. 
+    name: Put Option
+    stepItems: []
+    uuid: cca9b0a6-dce2-454e-8367-27519b6dae9e
+  - content: df
+    name: Step 6
+    stepItems: []
+    uuid: 152483c0-1174-4d82-ac85-c36db5a4a33e
+  - content: >
+      -
+      https://www.investopedia.com/articles/trading/092613/difference-between-short-selling-and-put-options.asp
+    name: References
+    stepItems: []
+    uuid: 35d66041-eac3-4247-b1f5-749dde6bd1d8
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
 uuid: bearish-short-vs-put-dodao-academy
