update guide Concentrated Liquidity

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -16,3 +16,4 @@ guides:
   - central-bank-digital-currency-dodao-academy.yaml
   - crypto-security-dodao-academy.yaml
   - bearish-short-vs-put-dodao-academy.yaml
+  - concentrated-liquidity-dodao-academy.yaml
