update guide Composable Stable Pools

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -17,3 +17,4 @@ guides:
   - crypto-security-dodao-academy.yaml
   - bearish-short-vs-put-dodao-academy.yaml
   - concentrated-liquidity-dodao-academy.yaml
+  - composable-stable-pools-dodao-academy.yaml
