--- a/src/composable-stable-pools-dodao-academy.yaml
+++ b/src/composable-stable-pools-dodao-academy.yaml
@@ -6,7 +6,7 @@ guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
 key: composable-stable-pools-dodao-academy
-name: Composable Stable Pools
+name: Composable Guides Repo
 publishStatus: Draft
 showIncorrectOnCompletion: true
 steps:
