--- a/src/composable-stable-pools-dodao-academy.yaml
+++ b/src/composable-stable-pools-dodao-academy.yaml
@@ -1,12 +1,12 @@
 categories:
   - engineering
 content: What are Composable Stable Pool and why do we need them?
-created: '2023-03-14T18:12:17.426Z'
+created: '2023-04-05T18:56:05.808Z'
 guideIntegrations:
   discordRoleIds: []
 guideType: onboarding
 key: composable-stable-pools-dodao-academy
-name: Composable Guides Repo
+name: Composable Guides Rep1
 publishStatus: Draft
 showIncorrectOnCompletion: true
 steps:
@@ -650,4 +650,4 @@ steps:
     uuid: 23d615d0-17ca-4775-b50d-f70d04f17399
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/balancer/balancer_stable_coins.png
-uuid: composable-stable-pools-balancer
+uuid: composable-stable-pools-dodao-academy
