update guide Composable Academy

--- a/src/guides.yaml
+++ b/src/guides.yaml
@@ -18,3 +18,4 @@ guides:
   - bearish-short-vs-put-dodao-academy.yaml
   - concentrated-liquidity-dodao-academy.yaml
   - composable-stable-pools-dodao-academy.yaml
+  - composable-academy-dodao-academy.yaml
